Remove String.isBlank from RelayAccessibilityService.java